# challenges

./: .gitignore
eset/find_string_in_files/: CMakeLists.txt  README.md
eset/find_string_in_files/src/: main.cpp
kmalloc/: Cargo.toml  README.md  build.rs
kmalloc/original/: CMakeLists.txt  kmalloc.c
kmalloc/original/tests/: CMakeLists.txt  main.c
kmalloc/src/: kassert.rs  kmalloc.c  kmalloc.rs  kmalloc_c.rs  lib.rs
kmalloc/tests/: sample.rs
rgoffi/: Cargo.toml  build.rs
rgoffi/go/: Makefile  ffi  fixalloc.go  libpreload.h  main.go  stubs.go  supply.go
rgoffi/go/c/: atomic_amd64.h  atomic_amd64.s  ffi  ffi.c  fixalloc.c
rgoffi/go/gocruntime/: atomic.c  atomic.h  atomic_amd64.c  atomic_amd64.h  atomic_amd64.s  fixalloc.c  fixalloc.h  goruntime.c  lockrank.h  lockrank_off.c  lockrank_off.h  panic.c  runtime2.c  runtime2.h  string.c  string.h  type.h
rgoffi/libs/: libpreload.h
rgoffi/src/: lib.rs
