[package]
name = "kmalloc"
version = "0.0.1"
edition = "2021"
authors = ["threadedstream"]

[lib]
name = "kmalloc"
path = "src/lib.rs"

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2.101", default-features = false }
libc-print = "0.1.17"

[dependencies]
cfg-if = "1.0.0"
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
