[package]
name = "rgoffi"
edition = "2021"
version = "0.0.1"
authors = ["threadedstream"]
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "rgoffi"

[[bin]]
path = "src/lib.rs"
name = "rgoffi"

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core'}
libc = "0.2.120"
num = "0.4.0"

